src/styles/common/_tooltip.scss
// Tooltip (which is also the legend component)
.tooltip-group, .legend-group {
  border: 1px solid #ddd;
  border-radius: 4px;
  background: white;
  opacity: 0.9;
  padding: 0 4px 0 4px;
  max-width: 160px;
  overflow: auto;

  .tooltip-title-section {
    display: table;
    border-bottom: 1px solid #ddd;
    width: 100%;
    color: #a7a7a7;
  }
  .tooltip-title-section.collapsed:hover {
    cursor: pointer;
    color: #22A7F0;
  }
  .tooltip-title-section:not(.collapsed) .tooltip-collapse:hover {
    cursor: pointer;
    color: #22A7F0;
  }
  .tooltip-title-section:hover:not(.collapsed) .tooltip-collapse {
    opacity: 1;
  }
  .tooltip-title-section.collapsed .tooltip-collapse {
    display: none;
  }
  .tooltip-collapse {
    display: table-cell;
    text-align: right;
    opacity: 0;
  }
  .tooltip-title {
    display: table-cell;
    font-size: 11px;
    font-weight: bold;
  }
  .tooltip-body {
    display: table;
    border-collapse: separate;
    border-spacing: 0 5px;
  }
  .tooltip-item {
    display: table-row;
  }
  .section {
    display: table-cell;
    vertical-align: middle;
    margin-right: 16px;
  }
  .section.tooltip-label, .section.value {
    padding-left: 5px;
    white-space: nowrap;
    max-width: 120px;
    overflow: hidden;
    text-overflow: ellipsis;
  }
  .section.tooltip-label {
    font-size: 12px;
    font-weight: bold;
  }
  .section.value {
    text-align: right;
    font-size: 13px;
  }
}

.tooltip-group {
  .tooltip-item {
    height: 18px;
  }
}
.legend-group {
  font-size: 11px;

  .section.tooltip-label {
    font-weight: normal;
  }
}

